Refactored test target detection